--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tabSales">Ventas</string>
+    <string name="clientTab">Clientes</string>
+    <string name="articleTab">Articulos</string>
+    <string name="configTab">Configuración</string>
 </resources>
