--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="clientTab">Clientes</string>
     <string name="articleTab">Articulos</string>
     <string name="configTab">Configuración</string>
+    <string name="open_nav_drawer">Open Drawer</string>
+    <string name="close_nav_drawer">Close Drawer</string>
 </resources>
