--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="name">Nombre</string>
     <string name="total">Total</string>
     <string name="status">Status</string>
+    <string name="Modelo">Modelo</string>
 </resources>
